syntax = "proto3";

option go_package = "./;register";

package register;

service register {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email    = 3;
    string code     = 4;
}

message RegisterResponse {
    bool succeed    = 1;
    string message  = 2;
}